--- a/.gitignore
+++ b/.gitignore
@@ -4,19 +4,12 @@ build
 /include/
 /lib/
 /data/yeast.fasta.*
-/bigrepair/ctph/unparsz
-/bigrepair/large_repair/irepair
-/bigrepair/largeb_repair/despair
-/bigrepair/largeb_repair/idespair
-/bigrepair/largeb_repair/irepair
-/bigrepair/largeb_repair/repair
-/bigrepair/repair/despair
-/bigrepair/repair/idespair
-/bigrepair/repair/irepair
-/bigrepair/ipostproc
-/bigrepair/iprocdic
-/bigrepair/postproc
-/bigrepair/procdic
+Big-BWT/bwtparse
+Big-BWT/bwtparse64
+Big-BWT/remap
+Big-BWT/simplebwt
+Big-BWT/simplebwt64
+Big-BWT/unparse
 /Makefile
 /tfm_index_construct
 /CMakeCache.txt
