WIP: restructure, move everything to BigBWT

--- a/BWT-Tunneling/seqana/Makefile
+++ b/BWT-Tunneling/seqana/Makefile
@@ -1,8 +1,9 @@
 include ../Make.helper
 
 #DBGEXECUTABLES = tfm_index_construct.x tfm_index_invert.x tfm_index_invert_to_binary.x dbg_edgespectrum.x
-DBGEXECUTABLES = tfm_index_construct.x tfm_index_invert.x tfm_index_invert_to_binary.x
-TRIEEXECUTABLES = create_trie_input.x trie_construct.x mp_search.x
+DBGEXECUTABLES =  tfm_index_construct.x tfm_index_invert.x tfm_index_invert_to_binary.x tfm_generate_aux.x
+#TRIEEXECUTABLES = create_trie_input.x trie_construct.x mp_search.x
+TRIEEXECUTABLES = create_trie_input.x  mp_search.x
 
 all: $(DBGEXECUTABLES) $(TRIEEXECUTABLES)
 
@@ -14,6 +15,10 @@ tfm_index_construct.x: include/tfm_index.hpp include/dbg_algorithms.hpp lib/tfm_
 tfm_index_invert.x: include/tfm_index.hpp include/dbg_algorithms.hpp lib/tfm_index_invert.cpp
 	$(MY_CXX) -Wall -Wextra $(MY_CXX_FLAGS) $(MY_CXX_OPT_FLAGS) $(C_OPTIONS) \
 	-I$(INC_DIR) -L$(LIB_DIR) -Iinclude -Llib lib/tfm_index_invert.cpp -o tfm_index_invert.x $(LIBS)
+
+tfm_generate_aux.x: include/tfm_index.hpp include/dbg_algorithms.hpp lib/tfm_index_invert.cpp
+	$(MY_CXX) -Wall -Wextra $(MY_CXX_FLAGS) $(MY_CXX_OPT_FLAGS) $(C_OPTIONS) \
+	-I$(INC_DIR) -L$(LIB_DIR) -Iinclude -Llib lib/tfm_generate_aux.cpp -o tfm_generate_aux.x $(LIBS)
 
 tfm_index_invert_to_binary.x: include/tfm_index.hpp include/dbg_algorithms.hpp lib/tfm_index_invert_to_binary.cpp
 	$(MY_CXX) -Wall -Wextra $(MY_CXX_FLAGS) $(MY_CXX_OPT_FLAGS) $(C_OPTIONS) \
