WIP: figure the select initialize in pfwg

--- a/Big-BWT/makefile
+++ b/Big-BWT/makefile
@@ -73,7 +73,7 @@ pfbwtNT64.x: pfbwt.cpp gsa/gsacak64.o utils.o malloc_count.o
 
 # prefix free WG construction
 pfwg.x: pfwg.cpp pfthreads.hpp gsa/gsacak.o utils.o xerrors.o malloc_count.o
-	$(CXX) $(CXX_FLAGS) -o $@ pfwg.cpp gsa/gsacak.o utils.o xerrors.o malloc_count.o -pthread -ldl
+	$(CXX) $(CXX_FLAGS) -o $@ pfwg.cpp -I$(INC_DIR) -L$(LIB_DIR) -Iinclude -Llib gsa/gsacak.o  utils.o xerrors.o malloc_count.o -pthread -ldl $(LIBS)
 
 unparse: unparse.c utils.o malloc_count.o
 	$(CC) $(CFLAGS) -o $@ $^ -ldl
