--- a/Big-BWT/makefile
+++ b/Big-BWT/makefile
@@ -12,7 +12,7 @@ include ~/sdsl-lite/Make.helper
 LIBS = -lsdsl -ldivsufsort -ldivsufsort64
 
 #DBGEXECUTABLES = tfm_index_construct.x tfm_index_invert.x tfm_index_invert_to_binary.x dbg_edgespectrum.x
-DBGEXECUTABLES =  tfm_index_construct.x tfm_index_invert.x tfm_index_invert_to_binary.x tfm_generate_aux.x
+DBGEXECUTABLES =  tfm_index_construct.x tfm_index_invert.x tfm_index_invert_to_binary.x
 #TRIEEXECUTABLES = create_trie_input.x trie_construct.x mp_search.x
 TRIEEXECUTABLES = create_trie_input.x  mp_search.x
 
@@ -101,10 +101,6 @@ tfm_index_construct.x: include/tfm_index.hpp include/dbg_algorithms.hpp tfm_inde
 tfm_index_invert.x: include/tfm_index.hpp include/dbg_algorithms.hpp tfm_index_invert.cpp
 	$(MY_CXX) -Wall -Wextra $(MY_CXX_FLAGS) $(MY_CXX_OPT_FLAGS) $(C_OPTIONS) \
 	-I$(INC_DIR) -L$(LIB_DIR) -Iinclude -Llib tfm_index_invert.cpp -o tfm_index_invert.x $(LIBS)
-
-tfm_generate_aux.x: include/tfm_index.hpp tfm_generate_aux.cpp utils.o
-	$(MY_CXX) -Wall -Wextra $(MY_CXX_FLAGS) $(MY_CXX_OPT_FLAGS) $(C_OPTIONS) \
-	-I$(INC_DIR) -L$(LIB_DIR) -Iinclude -Llib utils.o tfm_generate_aux.cpp -o tfm_generate_aux.x $(LIBS)
 
 tfm_index_invert_to_binary.x: include/tfm_index.hpp include/dbg_algorithms.hpp tfm_index_invert_to_binary.cpp
 	$(MY_CXX) -Wall -Wextra $(MY_CXX_FLAGS) $(MY_CXX_OPT_FLAGS) $(C_OPTIONS) \
