added forgotten Makefile

--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,4 @@
-.idea/*
-build
-/cmake-build-debug/
-/include/
-/lib/
-/data/yeast.fasta.*
-Big-BWT/bwtparse
-Big-BWT/bwtparse64
-Big-BWT/remap
-Big-BWT/simplebwt
-Big-BWT/simplebwt64
-Big-BWT/unparse
-/Makefile
-/tfm_index_construct
-/CMakeCache.txt
-/cmake_install.cmake
+/data/yeast.raw.*
 *.x
 *.o
-/CMakeFiles/
-tfm_index_invert_to_binary
+.idea
